Libidn NEWS -- History of user-visible changes.                 -*- outline -*-
Copyright (C) 2002-2011 Simon Josefsson
See the end for copying conditions.

* Version 1.21 (unreleased) [?]

** build: Visual Studio files fixed to define LIBIDN_BUILDING.
Tiny patch from Waqas Hussain <waqas20@gmail.com>.

** API and ABI is backwards compatible with the previous version.

* Version 1.20 (released 2011-03-01) [stable]

** libidn: Fix bug in ToUnicode to compare 'xn--' case-insensitively.
The problem is typically noticed when an upper ACE case string is
converted to Unicode.  Before, this would return the input rather than
converting the ACE form to Unicode.  Reported by Stepan Golosunov
<stepan@golosunov.pp.ru> in <http://bugs.debian.org/610617>.

** tests: Added self-test tst_idna3 to catch any regression of problem above.

** idn: Only print copyright and license blurb when used interactively.
Reported by "Andrew O. Shadoura" <bugzilla@tut.by> and Roman Mamedov
<rm@romanrm.ru> in <http://bugs.debian.org/615947> and
<http://bugs.debian.org/615949> respectively.

** Update gnulib files and translations.

** API and ABI is backwards compatible with the previous version.

* Version 1.19 (released 2010-05-22) [stable]

** doc: Typo fixes.  Added PDF version of API reference manual.
See doc/reference/libidn.pdf.

** build: Update gnulib files.

** build: Use valgrind -q to reduce verbosity.

** API and ABI is backwards compatible with the previous version.

* Version 1.18 (released 2010-02-15) [stable]

** libidn: Put forgotten symbols under old namespace.
Reverts one unnecessary change introduced in 1.17.  Suggested by Marco
d'Itri <md@linux.it>.

** API and ABI is backwards compatible with the previous version.

* Version 1.17 (released 2010-02-05) [alpha]

** libidn: Fix symbol export problem for a few variables.
Applications (that use these rarely used variables) built against
versions before 1.13 did not work with libidn versions 1.13 to 1.16.
